WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134512
AX: [iOS WebKit2] Support for Speak selection
https://bugs.webkit.org/show_bug.cgi?id=134512
Summary
AX: [iOS WebKit2] Support for Speak selection
chris fleizach
Reported
2014-07-01 14:32:22 PDT
WebKit2 needs support for speak selection <
rdar://problem/15212005
>
Attachments
patch
(1.80 KB, patch)
2014-07-01 14:46 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-07-01 14:46:44 PDT
Created
attachment 234199
[details]
patch
Darin Adler
Comment 2
2014-07-01 14:51:14 PDT
Comment on
attachment 234199
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=234199&action=review
> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1371 > + _page->getSelectionOrContentsAsString([self](const String& string, CallbackBase::Error error) { > + if (error != CallbackBase::Error::None) > + return; > + if ([self respondsToSelector:@selector(accessibilitySpeakSelectionSetContent:)]) > + [self accessibilitySpeakSelectionSetContent:string]; > + });
Is there a guarantee we won’t get the callback after self is deallocated? Do we need to retain/release self?
> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1372 > +
Stray blank line.
chris fleizach
Comment 3
2014-07-01 15:02:50 PDT
(In reply to
comment #2
)
> (From update of
attachment 234199
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=234199&action=review
> > > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1371 > > + _page->getSelectionOrContentsAsString([self](const String& string, CallbackBase::Error error) { > > + if (error != CallbackBase::Error::None) > > + return; > > + if ([self respondsToSelector:@selector(accessibilitySpeakSelectionSetContent:)]) > > + [self accessibilitySpeakSelectionSetContent:string]; > > + }); > > Is there a guarantee we won’t get the callback after self is deallocated? Do we need to retain/release self?
This is basically what define: does as well, so if that case is safe so will this one. Maybe someone else is able to speak to whether the connection callback blocks are torn down safely when WKContentView goes away...
> > > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1372 > > + > > Stray blank line.
Thanks!
chris fleizach
Comment 4
2014-07-01 15:26:00 PDT
http://trac.webkit.org/changeset/170670
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug