AX: [iOS WebKit2] Support for Speak selection https://bugs.webkit.org/show_bug.cgi?id=134512

Reviewed by Darin Adler.

Implement a method that Speak Selection can use to retrieve the selected content.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView accessibilityRetrieveSpeakSelectionContent]):



Canonical link: https://commits.webkit.org/152500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170670 268f45cc-cd09-0410-ab3c-d52691b4dbfc